# text-to-speech

./: .gitattributes  .gitignore  README.md  pyproject.toml  server.js
app/: __init__.py  main.py
scripts/: install.ps1  install.sh  start-lan.bat  start-node-lan.bat  start-node.ps1  start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh
