[project]
name = "texttospech"
version = "0.1.0"
description = "Local lightweight Kokoro TTS service"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "faster-whisper>=1.1.0",
    "kokoro>=0.9.4",
    "numpy>=1.26.0",
    "python-multipart>=0.0.20",
    "soundfile>=0.12.1",
    "uvicorn[standard]>=0.30.0",
]

[tool.uvicorn]
factory = false

